--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "source-map-support": "^0.5.11"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
