--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
+    "sequelize": "^5.6.0",
+    "sequelize-cli": "^5.4.0",
     "source-map-support": "^0.5.11"
   },
   "devDependencies": {
@@ -36,6 +38,13 @@
     "babel-loader": "^8.0.5",
     "chokidar": "^2.1.1",
     "css-loader": "^2.1.0",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-import-resolver-node": "^0.3.2",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-jest": "^22.4.1",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4",
     "glob": "^7.1.3",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.5.0",
@@ -51,14 +60,7 @@
     "webpack-bundle-analyzer": "^3.0.4",
     "webpack-dev-middleware": "^3.5.2",
     "webpack-hot-middleware": "^2.24.3",
-    "webpack-node-externals": "^1.7.2",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-import-resolver-node": "^0.3.2",
-    "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-jest": "^22.4.1",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.12.4"
+    "webpack-node-externals": "^1.7.2"
   },
   "scripts": {
     "lint:js": "eslint --ignore-path .gitignore --ignore-pattern \"!**/.*\" .",
@@ -72,6 +74,7 @@
     "bundle": "babel-node tools/run bundle",
     "build": "babel-node tools/run build",
     "build:stats": "yarn run build --release --analyze",
-    "start": "babel-node tools/run start"
+    "start": "babel-node tools/run start",
+    "sequelize": "babel-node ./node_modules/sequelize-cli/lib/sequelize"
   }
 }
