--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
+    "babel-jest": "^24.7.1",
     "babel-loader": "^8.0.5",
+    "babel-plugin-module-resolver": "^3.2.0",
     "chokidar": "^2.1.5",
     "css-loader": "^2.1.1",
     "eslint": "^5.16.0",
@@ -46,14 +48,18 @@
     "eslint-plugin-jest": "^22.5.1",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
+    "expect": "^24.7.1",
     "glob": "^7.1.3",
     "html-webpack-plugin": "^3.2.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^24.7.1",
     "mini-css-extract-plugin": "^0.6.0",
     "mkdirp": "^0.5.1",
     "null-loader": "^1.0.0",
     "react-deep-force-update": "^2.1.3",
     "react-dev-utils": "^9.0.0",
     "react-error-overlay": "^5.1.5",
+    "react-test-renderer": "^16.8.6",
     "rimraf": "^2.6.3",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
