test: add cucumber and saucelab

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,13 @@ services:
             DATABASE_NAME: thetribe
         depends_on:
             - postgres
+            - sauce-connect
         volumes:
             - ./:/usr/src/project
+        networks:
+          default:
+            aliases:
+              - app.local
     postgres:
         image: postgres:10.7
         environment:
@@ -21,5 +26,7 @@ services:
             POSTGRES_PASSWORD: 424242
         volumes:
             - db:/var/lib/postgresql/data
+    sauce-connect:
+        image: thetribe/sauce-connect:4.5.3
 volumes:
     db:
