--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@sentry/node": "^5.6.1",
     "connect-history-api-fallback": "^1.6.0",
     "cors": "^2.8.5",
+    "cucumber": "^5.1.0",
+    "expect": "^24.8.0",
     "express": "^4.17.1",
     "history": "^4.9.0",
     "node-sass": "^4.12.0",
@@ -28,6 +30,7 @@
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
+    "selenium-webdriver": "^4.0.0-alpha.1",
     "sequelize": "^5.12.3",
     "sequelize-cli": "^5.5.0",
     "source-map-support": "^0.5.13"
@@ -82,6 +85,17 @@
     "test": "jest",
     "test:watch": "yarn run test --watch --notify",
     "test:cover": "yarn run test --coverage",
+    "test:func": "cucumber-js",
+    "test:func:local:chrome": "cucumber-js --parallel 4 --world-parameters='{\"local\": 1, \"browser\": \"chrome\"}'",
+    "test:func:local:firefox": "cucumber-js --parallel 4 --world-parameters='{\"local\": 1, \"browser\": \"firefox\"}'",
+    "test:func:local:safari": "cucumber-js --parallel 4 --world-parameters='{\"local\": 1, \"browser\": \"safari\"}'",
+    "test:func:visual:chrome": "cucumber-js --world-parameters='{\"local\": 1, \"display\": 1, \"browser\": \"chrome\"}'",
+    "test:func:visual:firefox": "cucumber-js --world-parameters='{\"local\": 1, \"display\": 1, \"browser\": \"firefox\"}'",
+    "test:func:visual:safari": "cucumber-js --world-parameters='{\"local\": 1, \"display\": 1, \"browser\": \"safari\"}'",
+    "test:func:sauce:chrome": "cucumber-js --fail-fast --world-parameters='{\"browser\": \"chrome\"}'",
+    "test:func:sauce:firefox": "cucumber-js --fail-fast --world-parameters='{\"browser\": \"firefox\"}'",
+    "test:func:sauce:ie": "cucumber-js --fail-fast --world-parameters='{\"browser\": \"internet explorer\"}'",
+    "test:func:sauce:safari": "cucumber-js --fail-fast --world-parameters='{ \"browser\": \"safari\"}'",
     "clean": "babel-node tools/run clean",
     "copy": "babel-node tools/run copy",
     "bundle": "babel-node tools/run bundle",
