--- a/package.json
+++ b/package.json
@@ -94,7 +94,7 @@
     "test:func:visual:safari": "cucumber-js --world-parameters='{\"local\": 1, \"display\": 1, \"browser\": \"safari\"}'",
     "test:func:sauce:chrome": "cucumber-js --fail-fast --world-parameters='{\"browser\": \"chrome\"}'",
     "test:func:sauce:firefox": "cucumber-js --fail-fast --world-parameters='{\"browser\": \"firefox\"}'",
-    "test:func:sauce:ie": "cucumber-js --fail-fast --world-parameters='{\"browser\": \"internet explorer\"}'",
+    "test:func:sauce:ie": "cucumber-js --fail-fast --world-parameters='{\"browser\": \"ie\"}'",
     "test:func:sauce:safari": "cucumber-js --fail-fast --world-parameters='{ \"browser\": \"safari\"}'",
     "clean": "babel-node tools/run clean",
     "copy": "babel-node tools/run copy",
