fix(tests): Add aliases in babelrc

--- a/api/.babelrc
+++ b/api/.babelrc
@@ -1,5 +1,11 @@
 {
     "plugins": [
-        ["module-resolver", { "root": ["./api"] }]
+        [
+            "module-resolver", {
+                "alias": {
+                    "@api": "./api",
+                }
+            }
+        ]
     ]
 }
