feat(sentry): add sentry on front-end

--- a/app/.eslintrc
+++ b/app/.eslintrc
@@ -6,5 +6,8 @@
         "import/resolver": {
             "alias": [["@app", "./app"]]
         }
+    },
+    "globals": {
+        "__DEV__": false
     }
 }
