--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   ],
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
+    "@sentry/browser": "^5.3.0",
     "@sentry/node": "^5.1.0",
     "connect-history-api-fallback": "^1.6.0",
     "cors": "^2.8.5",
