--- a/package.json
+++ b/package.json
@@ -12,65 +12,65 @@
   ],
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
-    "@sentry/browser": "^5.3.0",
-    "@sentry/node": "^5.1.0",
+    "@sentry/browser": "^5.4.0",
+    "@sentry/node": "^5.4.0",
     "connect-history-api-fallback": "^1.6.0",
     "cors": "^2.8.5",
-    "express": "^4.16.4",
+    "express": "^4.17.1",
     "history": "^4.9.0",
     "node-sass": "^4.12.0",
-    "pg": "^7.10.0",
+    "pg": "^7.11.0",
     "pretty-error": "^2.1.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
-    "react-router-dom": "^5.0.0",
+    "react-router-dom": "^5.0.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "sequelize": "^5.7.6",
+    "sequelize": "^5.8.7",
     "sequelize-cli": "^5.4.0",
     "source-map-support": "^0.5.12"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.4",
-    "@babel/node": "^7.2.2",
-    "@babel/preset-env": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/node": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "babel-jest": "^24.7.1",
-    "babel-loader": "^8.0.5",
+    "babel-loader": "8.0.6",
     "babel-plugin-module-resolver": "^3.2.0",
-    "chokidar": "^2.1.5",
+    "chokidar": "^3.0.1",
     "css-loader": "^2.1.1",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-jest": "^22.5.1",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-jest": "^22.6.4",
     "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-react": "^7.13.0",
     "expect": "^24.7.1",
-    "glob": "^7.1.3",
+    "glob": "^7.1.4",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.7.1",
-    "mini-css-extract-plugin": "^0.6.0",
+    "mini-css-extract-plugin": "^0.7.0",
     "mkdirp": "^0.5.1",
-    "null-loader": "^1.0.0",
+    "null-loader": "^3.0.0",
     "react-deep-force-update": "^2.1.3",
-    "react-dev-utils": "^9.0.0",
-    "react-error-overlay": "^5.1.5",
+    "react-dev-utils": "^9.0.1",
+    "react-error-overlay": "^5.1.6",
     "react-test-renderer": "^16.8.6",
     "rimraf": "^2.6.3",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "stylelint": "^10.0.1",
     "stylelint-config-standard": "^18.3.0",
-    "webpack": "^4.30.0",
+    "webpack": "^4.33.0",
     "webpack-assets-manifest": "^3.1.1",
     "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-dev-middleware": "^3.6.2",
-    "webpack-hot-middleware": "^2.24.4",
+    "webpack-dev-middleware": "^3.7.0",
+    "webpack-hot-middleware": "^2.25.0",
     "webpack-node-externals": "^1.7.2"
   },
   "scripts": {
