Use shared eslint config

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,27 +1,4 @@
 {
     "root": true,
-    "extends": "airbnb",
-    "rules": {
-        "arrow-parens": ["error", "always"],
-        "curly": ["error", "all"],
-        "import/prefer-default-export": ["warn"],
-        "indent": ["error", 4, { "SwitchCase": 1 }],
-        "jsx-a11y/anchor-is-valid": ["error", {
-            "components": ["Link"],
-            "specialLink": ["to"],
-            "aspects": ["noHref", "invalidHref", "preferButton"]
-        }],
-        "max-len": ["warn", 120],
-        "no-multiple-empty-lines": ["error", { "max": 1, "maxBOF": 0, "maxEOF": 0 }],
-        "no-plusplus": "off",
-        "no-restricted-syntax": ["error", "ForInStatement", "LabeledStatement", "WithStatement"],
-        "object-curly-newline": "off",
-        "padding-line-between-statements": ["error", { "blankLine": "always", "prev": "*", "next": "return" }],
-        "react/jsx-indent": ["error", 4],
-        "react/jsx-indent-props": ["error", 4],
-        "react/require-default-props": "off",
-        "yoda": ["error", "always", { "onlyEquality": true }],
-        "no-console": ["error", { "allow": ["warn", "error", "info"] }],
-        "jsx-quotes": ["error", "prefer-double"]
-    }
+    "extends": "@thetribe/eslint-config-react"
 }
