--- a/package.json
+++ b/package.json
@@ -38,12 +38,12 @@
     "@babel/node": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
+    "@thetribe/eslint-config-react": "^0.1.2",
     "babel-jest": "^24.7.1",
     "babel-loader": "8.0.6",
     "babel-plugin-module-resolver": "^3.2.0",
     "css-loader": "^2.1.1",
     "eslint": "^5.16.0",
-    "eslint-config-airbnb": "^17.1.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-jest": "^22.6.4",
