--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "style-loader": "^0.23.1",
     "stylelint": "^10.1.0",
     "stylelint-config-standard": "^18.3.0",
+    "terser-webpack-plugin": "^1.4.1",
     "webpack": "^4.38.0",
     "webpack-assets-manifest": "^3.1.1",
     "webpack-bundle-analyzer": "^3.4.1",
