--- a/api/.eslintrc
+++ b/api/.eslintrc
@@ -4,7 +4,7 @@
     },
     "settings": {
         "import/resolver": {
-            "alias": [["@api", "./api"]]
+            "alias": [["@api", "./api"], ["@app", "./app"]]
         }
     }
 }
