Add: POM model for tests + code review fixes

--- a/package.json
+++ b/package.json
@@ -86,17 +86,17 @@
     "test": "jest",
     "test:watch": "yarn run test --watch --notify",
     "test:cover": "yarn run test --coverage",
-    "test:func": "cucumber-js",
-    "test:func:local:chrome": "cucumber-js --parallel 4 --world-parameters='{\"local\": 1, \"browser\": \"chrome\"}'",
-    "test:func:local:firefox": "cucumber-js --parallel 4 --world-parameters='{\"local\": 1, \"browser\": \"firefox\"}'",
-    "test:func:local:safari": "cucumber-js --parallel 4 --world-parameters='{\"local\": 1, \"browser\": \"safari\"}'",
-    "test:func:visual:chrome": "cucumber-js --world-parameters='{\"local\": 1, \"display\": 1, \"browser\": \"chrome\"}'",
-    "test:func:visual:firefox": "cucumber-js --world-parameters='{\"local\": 1, \"display\": 1, \"browser\": \"firefox\"}'",
-    "test:func:visual:safari": "cucumber-js --world-parameters='{\"local\": 1, \"display\": 1, \"browser\": \"safari\"}'",
-    "test:func:sauce:chrome": "cucumber-js --fail-fast --world-parameters='{\"browser\": \"chrome\"}'",
-    "test:func:sauce:firefox": "cucumber-js --fail-fast --world-parameters='{\"browser\": \"firefox\"}'",
-    "test:func:sauce:ie": "cucumber-js --fail-fast --world-parameters='{\"browser\": \"ie\"}'",
-    "test:func:sauce:safari": "cucumber-js --fail-fast --world-parameters='{ \"browser\": \"safari\"}'",
+    "test:func": "cucumber-js --require-module @babel/register",
+    "test:func:local:chrome": "cucumber-js --require-module @babel/register --parallel 4 --world-parameters='{\"local\": 1, \"browser\": \"chrome\"}'",
+    "test:func:local:firefox": "cucumber-js --require-module @babel/register --parallel 4 --world-parameters='{\"local\": 1, \"browser\": \"firefox\"}'",
+    "test:func:local:safari": "cucumber-js --require-module @babel/register --parallel 4 --world-parameters='{\"local\": 1, \"browser\": \"safari\"}'",
+    "test:func:visual:chrome": "cucumber-js --require-module @babel/register --world-parameters='{\"local\": 1, \"display\": 1, \"browser\": \"chrome\"}'",
+    "test:func:visual:firefox": "cucumber-js --require-module @babel/register --world-parameters='{\"local\": 1, \"display\": 1, \"browser\": \"firefox\"}'",
+    "test:func:visual:safari": "cucumber-js --require-module @babel/register --world-parameters='{\"local\": 1, \"display\": 1, \"browser\": \"safari\"}'",
+    "test:func:sauce:chrome": "cucumber-js --require-module @babel/register --fail-fast --world-parameters='{\"browser\": \"chrome\"}'",
+    "test:func:sauce:firefox": "cucumber-js --require-module @babel/register --fail-fast --world-parameters='{\"browser\": \"firefox\"}'",
+    "test:func:sauce:ie": "cucumber-js --require-module @babel/register --fail-fast --world-parameters='{\"browser\": \"ie\"}'",
+    "test:func:sauce:safari": "cucumber-js --require-module @babel/register --fail-fast --world-parameters='{ \"browser\": \"safari\"}'",
     "clean": "babel-node tools/run clean",
     "copy": "babel-node tools/run copy",
     "bundle": "babel-node tools/run bundle",
