Add loader configuration for images

--- a/package.json
+++ b/package.json
@@ -54,8 +54,10 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.16.0",
     "expect": "^24.9.0",
+    "file-loader": "^4.2.0",
     "glob": "^7.1.5",
     "identity-obj-proxy": "^3.0.0",
+    "image-webpack-loader": "^6.0.0",
     "jest": "^24.9.0",
     "mini-css-extract-plugin": "^0.8.0",
     "mkdirp": "^0.5.1",
