Fix eslint configuration for api

--- a/api/.eslintrc
+++ b/api/.eslintrc
@@ -6,5 +6,8 @@
         "import/resolver": {
             "alias": [["@api", "./api"]]
         }
+    },
+    "globals": {
+        "__DEV__": false
     }
 }
