chore: add GraphQL query example on the app side
Add graphql-tag support in webpack

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@thetribe/eslint-config-react": "^0.2.1",
     "babel-jest": "^24.9.0",
     "babel-loader": "8.0.6",
+    "babel-plugin-graphql-tag": "^2.5.0",
     "babel-plugin-module-resolver": "^3.2.0",
     "css-loader": "^3.2.0",
     "eslint": "^6.6.0",
@@ -68,6 +69,7 @@
     "eslint-plugin-react": "^7.16.0",
     "expect": "^24.9.0",
     "glob": "^7.1.5",
+    "graphql-tag": "^2.10.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
     "mini-css-extract-plugin": "^0.8.0",
@@ -92,9 +94,9 @@
   },
   "scripts": {
     "lint:js": "eslint --ignore-path .gitignore --ignore-pattern \"!**/.*\" .",
-    "lint:js:fix": "yarn run lint --fix",
+    "lint:js:fix": "yarn run lint:js --fix",
     "lint:css": "stylelint \"app/**/*.{css,scss}\"",
-    "lint:css:fix": "yarn run lint-css --fix",
+    "lint:css:fix": "yarn run lint:css --fix",
     "lint": "yarn run lint:js && yarn run lint:css",
     "test": "jest",
     "test:watch": "yarn run test --watch --notify",
