--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@thetribe/eslint-config-react": "^0.2.2",
     "babel-jest": "^24.9.0",
     "babel-loader": "8.0.6",
+    "babel-plugin-graphql-tag": "^2.5.0",
     "babel-plugin-module-resolver": "^3.2.0",
     "css-loader": "^3.2.0",
     "cucumber": "^6.0.4",
@@ -66,6 +67,7 @@
     "expect": "^24.9.0",
     "file-loader": "^4.2.0",
     "glob": "^7.1.6",
+    "graphql-tag": "^2.10.1",
     "identity-obj-proxy": "^3.0.0",
     "image-webpack-loader": "^6.0.0",
     "import-fresh": "^3.1.0",
@@ -93,9 +95,9 @@
   },
   "scripts": {
     "lint:js": "eslint --ignore-path .gitignore --ignore-pattern \"!**/.*\" .",
-    "lint:js:fix": "yarn run lint --fix",
+    "lint:js:fix": "yarn run lint:js --fix",
     "lint:css": "stylelint \"app/**/*.{css,scss}\"",
-    "lint:css:fix": "yarn run lint-css --fix",
+    "lint:css:fix": "yarn run lint:css --fix",
     "lint": "yarn run lint:js && yarn run lint:css",
     "test": "jest",
     "test:watch": "yarn run test --watch --notify",
