--- a/features/.eslintrc
+++ b/features/.eslintrc
@@ -4,7 +4,11 @@
     },
     "rules": {
         "func-names": "off",
-        "prefer-arrow-callback": "off",
-        "import/prefer-default-export": "off"
+        "import/no-extraneous-dependencies": ["error", {
+            devDependencies: true,
+            optionalDependencies: false
+        }],
+        "import/prefer-default-export": "off",
+        "prefer-arrow-callback": "off"
     }
 }
