--- a/package.json
+++ b/package.json
@@ -14,15 +14,27 @@
     "@babel/polyfill": "^7.7.0",
     "@sentry/browser": "^5.8.0",
     "@sentry/node": "^5.8.0",
+    "apollo-cache-inmemory": "^1.6.3",
+    "apollo-client": "^2.6.4",
+    "apollo-link": "^1.2.13",
+    "apollo-link-error": "^1.1.12",
+    "apollo-link-http": "^1.5.16",
+    "apollo-link-logger": "^1.2.3",
+    "apollo-link-schema": "^1.2.4",
+    "bcrypt": "^3.0.6",
     "connect-history-api-fallback": "^1.6.0",
     "cors": "^2.8.5",
+    "dataloader": "^1.4.0",
     "express": "^4.17.1",
+    "express-graphql": "^0.9.0",
+    "graphql": "^14.5.8",
     "history": "^4.10.1",
     "node-sass": "^4.13.0",
     "pg": "^7.12.1",
     "pretty-error": "^2.1.1",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
+    "react-apollo": "^3.1.3",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
