--- a/app/.babelrc
+++ b/app/.babelrc
@@ -4,6 +4,7 @@
             "module-resolver", {
                 "alias": {
                     "@app": "./app",
+                    "@schema": "./schema"
                 }
             }
         ]
