--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "history": "^4.10.1",
+    "i18next": "^19.0.2",
     "node-sass": "^4.13.1",
     "pg": "^7.17.1",
     "pretty-error": "^2.1.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-i18next": "^11.2.6",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
