--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@babel/plugin-transform-runtime": "^7.7.6",
     "@babel/preset-env": "^7.7.6",
     "@babel/preset-react": "^7.7.4",
-    "@thetribe/eslint-config-react": "^0.2.2",
+    "@thetribe/eslint-config-react": "^0.3.1",
     "babel-jest": "^24.9.0",
     "babel-loader": "8.0.6",
     "babel-plugin-module-resolver": "^4.0.0",
@@ -51,6 +51,7 @@
     "eslint-plugin-jest": "^23.1.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "expect": "^24.9.0",
     "file-loader": "^5.0.2",
     "glob": "^7.1.6",
