--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "webpack": "^4.41.5",
     "webpack-assets-manifest": "^3.1.1",
     "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-dev-server": "3.9.0",
+    "webpack-dev-server": "^3.10.2",
     "webpack-node-externals": "^1.7.2"
   },
   "scripts": {
